fix: when the modal was opened, body should be overflow hidden

--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -6,9 +6,13 @@
     color: $color-white;
   }
 
-	.QuickviewVideoCard{
-		width: 384px;
-	}
+  .ReactModal__Body--open {
+    overflow: hidden;
+  }
+
+  .QuickviewVideoCard {
+    width: 384px;
+  }
   .marketViewSlickSlider {
     .item {
       position: relative;
